--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -203,4 +203,5 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="V6S-SG-vPK" first
+                            <constraint firstItem="V6S-SG-vPK" firstAttribute="leading" secondItem="lOY-tf-MmA" secondAttribute="leading" id="3rC-bl-ssi"/>
+      
