--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -205,4 +205,4 @@
                         <constraints>
                             <constraint firstItem="V6S-SG-vPK" firstAttribute="leading" secondItem="lOY-tf-MmA" secondAttribute="leading" id="3rC-bl-ssi"/>
                             <constraint firstItem="pLk-dl-Oyu" firstAttribute="centerY" secondItem="CqG-2W-9hu" secondAttribute="centerY" id="7SC-Fg-lW5"/>
-                            <cons
+                            <constraint firstItem="V6S-SG-vPK" firstAttribute="top" secondItem="lOY-tf-MmA" second
