--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -208,4 +208,5 @@
                             <constraint firstItem="V6S-SG-vPK" firstAttribute="top" secondItem="lOY-tf-MmA" secondAttribute="top" id="7jp-5g-ajH"/>
                             <constraint firstItem="vQt-tQ-wPn" firstAttribute="leading" secondItem="lOY-tf-MmA" secondAttribute="leading" id="IpT-Fa-DWA"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="V6S-SG-vPK" secondAttribute="bottom" id="N1X-GH-b6f"/>
-                            <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="vQt-tQ-wPn" secondAttribute="trailing" id="Oqb-7i-Q
+                            <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="vQt-tQ-wPn" secondAttribute="trailing" id="Oqb-7i-Qip"/>
+                            <constraint firstItem="lOY-tf-MmA" firs
