--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -209,4 +209,5 @@
                             <constraint firstItem="vQt-tQ-wPn" firstAttribute="leading" secondItem="lOY-tf-MmA" secondAttribute="leading" id="IpT-Fa-DWA"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="V6S-SG-vPK" secondAttribute="bottom" id="N1X-GH-b6f"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="vQt-tQ-wPn" secondAttribute="trailing" id="Oqb-7i-Qip"/>
-                            <constraint firstItem="lOY-tf-MmA" firs
+                            <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="vQt-tQ-wPn" secondAttribute="bottom" id="X5X-l5-jVd"/>
+   
