Update dev docs

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -210,4 +210,4 @@
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="V6S-SG-vPK" secondAttribute="bottom" id="N1X-GH-b6f"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="vQt-tQ-wPn" secondAttribute="trailing" id="Oqb-7i-Qip"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="vQt-tQ-wPn" secondAttribute="bottom" id="X5X-l5-jVd"/>
-   
+                            <constraint firstItem="sL0-eH-k7s" firstAttribute="centerX" secondIte
