--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -211,4 +211,4 @@
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="vQt-tQ-wPn" secondAttribute="trailing" id="Oqb-7i-Qip"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="bottom" secondItem="vQt-tQ-wPn" secondAttribute="bottom" id="X5X-l5-jVd"/>
                             <constraint firstItem="sL0-eH-k7s" firstAttribute="centerX" secondItem="CqG-2W-9hu" secondAttribute="centerX" id="XjG-Wn-hPf"/>
-                     
+                            <constraint firstItem="sL0-eH-k7s" firstAttribute="centerY" secondItem=
