--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -213,4 +213,4 @@
                             <constraint firstItem="sL0-eH-k7s" firstAttribute="centerX" secondItem="CqG-2W-9hu" secondAttribute="centerX" id="XjG-Wn-hPf"/>
                             <constraint firstItem="sL0-eH-k7s" firstAttribute="centerY" secondItem="CqG-2W-9hu" secondAttribute="centerY" id="YCH-zK-A4j"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="V6S-SG-vPK" secondAttribute="trailing" id="Ybh-LY-x6z"/>
-                            <constra
+                            <constraint firstItem="pLk-dl-Oyu" firstAttribute="centerX" secondItem="CqG-2W-9hu" secon
