--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -214,4 +214,5 @@
                             <constraint firstItem="sL0-eH-k7s" firstAttribute="centerY" secondItem="CqG-2W-9hu" secondAttribute="centerY" id="YCH-zK-A4j"/>
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="V6S-SG-vPK" secondAttribute="trailing" id="Ybh-LY-x6z"/>
                             <constraint firstItem="pLk-dl-Oyu" firstAttribute="centerX" secondItem="CqG-2W-9hu" secondAttribute="centerX" id="aeH-gs-x8O"/>
-                            <constraint firstItem="vQt-tQ-wPn" firstAttribute="top" secondItem="lOY-tf-MmA" second
+                            <constraint firstItem="vQt-tQ-wPn" firstAttribute="top" secondItem="lOY-tf-MmA" secondAttribute="top" constant="16" id="oD3-tc-JiY"/>
+                        </co
