--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -215,4 +215,6 @@
                             <constraint firstItem="lOY-tf-MmA" firstAttribute="trailing" secondItem="V6S-SG-vPK" secondAttribute="trailing" id="Ybh-LY-x6z"/>
                             <constraint firstItem="pLk-dl-Oyu" firstAttribute="centerX" secondItem="CqG-2W-9hu" secondAttribute="centerX" id="aeH-gs-x8O"/>
                             <constraint firstItem="vQt-tQ-wPn" firstAttribute="top" secondItem="lOY-tf-MmA" secondAttribute="top" constant="16" id="oD3-tc-JiY"/>
-                        </co
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lOY-tf-MmA"/>
+  
