--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -218,4 +218,5 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lOY-tf-MmA"/>
                     </view>
-                    <navigationItem ke
+                    <navigationItem key="navigationItem" title="My Stocks" id="gfn-U4-WaY">
+                        
