--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -220,4 +220,5 @@
                     </view>
                     <navigationItem key="navigationItem" title="My Stocks" id="gfn-U4-WaY">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="Plus Symbol" id="AUn-6t-WUV">
-                            <color key="tintColor" white="1" alpha="1" colorSpace=
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+           
