--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -221,4 +221,5 @@
                     <navigationItem key="navigationItem" title="My Stocks" id="gfn-U4-WaY">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="Plus Symbol" id="AUn-6t-WUV">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-           
+                            <connections>
+                                <action selector="
