--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -222,4 +222,5 @@
                         <barButtonItem key="rightBarButtonItem" title="Item" image="Plus Symbol" id="AUn-6t-WUV">
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
-                                <action selector="
+                                <action selector="showStockSymbolPopup:" destination="LCn-cc-Sap" id="eh9-va-2Of"/>
+                           
