[chromium] Unreviewed gardening.

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -223,4 +223,6 @@
                             <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="showStockSymbolPopup:" destination="LCn-cc-Sap" id="eh9-va-2Of"/>
-                           
+                            </connections>
+                        </barButtonItem>
+                    </
