--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -227,4 +227,5 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        
+                        <outlet property="activityIndicator" destination="pLk-dl-Oyu" id="ek1-wK-nnB"/>
+           
