--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -228,4 +228,4 @@
                     </navigationItem>
                     <connections>
                         <outlet property="activityIndicator" destination="pLk-dl-Oyu" id="ek1-wK-nnB"/>
-           
+                        <outlet property="dismissPopupButton" destination="V6S-SG-vPK" id=
