--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -230,4 +230,5 @@
                         <outlet property="activityIndicator" destination="pLk-dl-Oyu" id="ek1-wK-nnB"/>
                         <outlet property="dismissPopupButton" destination="V6S-SG-vPK" id="lAf-j5-j70"/>
                         <outlet property="stockPopupLabel" destination="N50-OA-YFX" id="QtT-dB-TBV"/>
-                        <outlet property="stockPo
+                        <outlet property="stockPopupOkButton" destination="8qH-Qi-JHC" id="ady-NZ-0c5"/>
+                        <outlet proper
