--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -232,4 +232,5 @@
                         <outlet property="stockPopupLabel" destination="N50-OA-YFX" id="QtT-dB-TBV"/>
                         <outlet property="stockPopupOkButton" destination="8qH-Qi-JHC" id="ady-NZ-0c5"/>
                         <outlet property="stockPopupTextField" destination="QUg-rb-MyI" id="fYB-BC-dAO"/>
-                        <outlet property="stockSymbolPopupView" destination="sL0-eH-k7s" id="kvG-Xg-LbV
+                        <outlet property="stockSymbolPopupView" destination="sL0-eH-k7s" id="kvG-Xg-LbV"/>
+                        <outlet property="stockTableView" destination="vQt-t
