--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -237,4 +237,5 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pXe-6N-LUg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-  
+            </objects>
+            <point key="canvasLocation" x="1241" y="7
