--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -238,4 +238,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pXe-6N-LUg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1241" y="7
+            <point key="canvasLocation" x="1241" y="72"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="buS-YX-1XB"
