--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -243,4 +243,5 @@
         <!--Navigation Controller-->
         <scene sceneID="buS-YX-1XB">
             <objects>
-                <navigationController automaticallyAdjus
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hoo-7E-1b5" sceneMemberID="viewController">
+                    <toolbar
