Update to latest version

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -252,4 +252,6 @@
                     <nil name="viewControllers"/>
                     <connections>
                         <segue destination="LCn-cc-Sap" kind="relationship" relationship="rootViewController" id="5sv-cp-ImS"/>
-      
+                    </connections>
+                </navigationController>
+             
