--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -254,4 +254,6 @@
                         <segue destination="LCn-cc-Sap" kind="relationship" relationship="rootViewController" id="5sv-cp-ImS"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NyD-6o-dva" userLabel="First 
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NyD-6o-dva" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+     
