Updated Thai translation.

--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -256,4 +256,6 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NyD-6o-dva" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-     
+            <point key="canvasLocation" x="444" y="72"/>
+        </scene>
+    </scene
