--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -258,4 +258,7 @@
             </objects>
             <point key="canvasLocation" x="444" y="72"/>
         </scene>
-    </scene
+    </scenes>
+    <resources>
+        <image name="Down Arrow" width="18" height="30"/>
+      
