--- a/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
+++ b/KrasamoStockTracker/Storyboards/Base.lproj/Main.storyboard
@@ -261,4 +261,5 @@
     </scenes>
     <resources>
         <image name="Down Arrow" width="18" height="30"/>
-      
+        <image name="Plus Symbol" width="75" height="75"/>
+        <image 
